--- a/Calc.ipynb
+++ b/Calc.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMRMJBws2JymhTJU9Kb0lQp",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -28,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "x-lkBe3XdK5_",
-        "outputId": "1ace3e37-a5b3-4995-a36a-f277d536279e"
+        "outputId": "435fffa7-50b1-4785-e3a6-80344d500043"
       },
       "outputs": [
         {
@@ -42,10 +26,10 @@
           "name": "stdout",
           "text": [
             "This is a calculator.\n",
-            "What type of math would you like to do (please enter +,-,*,/,//,%,**)? Type 'break' when finished +\n",
+            "What type of math would you like to do (please enter +,-,*,/,//,%,**)? Type 'break' when finished to\n",
             "What is your first number? 4\n",
-            "What is your second number? 4\n",
-            "8\n",
+            "What is your second number? 5\n",
+            "Invalid Operator\n",
             "What type of math would you like to do (please enter +,-,*,/,//,%,**)? Type 'break' when finished break\n",
             "Thank You!\n"
           ]
@@ -56,7 +40,7 @@
         "print(\"This is a calculator.\")\n",
         "\n",
         "while choice != \"break\":\n",
-        "  operator = str(input(\"What type of math would you like to do (please enter +,-,*,/,//,%,**)? Type 'break' when finished \"))\n",
+        "  operator = str(input(\"What type of math would you like to do (please enter +,-,*,/,//,%,**)? Type 'break' when finished: \"))\n",
         "  if operator == 'break':\n",
         "    print(\"Thank You!\")\n",
         "    break\n",
@@ -77,8 +61,25 @@
         "  elif operator == \"**\":\n",
         "    print(var1**var2)\n",
         "  else:\n",
+        "    print(\"Invalid Operator\")\n",
         "    continue"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyPiyKonuLFzFHPY4AnSZJrO",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
