--- a/SlicingDate.ipynb
+++ b/SlicingDate.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVrGxekEnFoKlpyhq6d/9E",
+      "authorship_tag": "ABX9TyM7rpuamkfqSEdurRLV3C3B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eID2Bnauo2WA",
-        "outputId": "7b213b4a-2761-4b24-d536-cac2ed6fc432"
+        "outputId": "28b50927-ba59-4f90-aa79-5410c0a01a91"
       },
       "outputs": [
         {
@@ -51,15 +51,13 @@
       "source": [
         "date = str(input(\"Enter a date in MM/DD/YYYY format: \"))\n",
         "\n",
-        "s = date\n",
+        "Month = date[:2]\n",
+        "Day = date[3:5]\n",
+        "Year = date[6:10]\n",
         "\n",
-        "Month = s[:2]\n",
-        "Day = s[3:5]\n",
-        "Year = s[6:10]\n",
-        "\n",
-        "print(\"Month: \", Month)\n",
-        "print(\"Day: \", Day)\n",
-        "print(\"Year: \", Year)"
+        "print(\"Month: \",Month)\n",
+        "print(\"Day: \",Day)\n",
+        "print(\"Year: \",Year)"
       ]
     }
   ]
