--- a/List.ipynb
+++ b/List.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPl0q9mPzS6lBtu799Mcb7h",
+      "authorship_tag": "ABX9TyM3uXLqfz7EPy8mIIqqJIl9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "source": [
+        "L = []\n",
+        "num = int(input(\"Enter a value: \"))\n",
+        "\n",
+        "while num != 0:\n",
+        "  L.append(num)\n",
+        "  num = int(input('Enter a value: '))\n",
+        "L"
+      ],
+      "metadata": {
+        "id": "b37qhvH5Vnat",
+        "outputId": "68b4244a-e719-447c-ce0d-75cf7fdcb26b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter a value: 5\n",
+            "Enter a value: 2\n",
+            "Enter a value: 8\n",
+            "Enter a value: 0\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[5, 2, 8]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "MnmeY9THG7RR",
         "colab": {
